helm/nginx.pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: knginx
spec:
  containers:
    - name: knginx
      image: nginx-alpine
